<resources>
    <string name="app_name">Calculator</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="percent">%</string>
    <string name="mod">|</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="dot">.</string>
    <string name="minus">–</string>
    <string name="multiply">×</string>
    <string name="division">÷</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="ac">AC</string>
    <string name="del">del</string>
    <string name="equal">=</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="plusMinus">+/-</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="plus">+</string>
    <string name="oneByX">1/x</string>
    <string name="squareRoot">√</string>
    <string name="sine">Sin</string>
    <string name="cosine">cos</string>
    <string name="log">log</string>
    <string name="brackets">( )</string>
    <string name="square">x^2</string>
    <string name="standard">Standard</string>
    <string name="scientific">Scientific</string>
    <string name="todo">TODO</string>
    <string name="factorial">!</string>
    <string name="ln">ln</string>
    <string name="tan">tan</string>
    <string name="pi">𝜋</string>
    <string name="_10_x">10^x</string>
    <string name="x">|X|</string>
    <string name="close">)</string>
    <string name="x_y">x^y</string>
</resources>