<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StandardActivity">

    <EditText
        android:id="@+id/standardCalciTextNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="number|numberSigned"
        android:singleLine="true"
        android:textAlignment="viewEnd"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="411dp"
        android:layout_height="443dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/standardCalciTextNumber"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/plusByMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/plusMinus"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="5" />

        <Button
            android:id="@+id/zeroButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_0"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="5" />

        <Button
            android:id="@+id/dotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/dot"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="5" />

        <Button
            android:id="@+id/additionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/plus"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="5" />

        <Button
            android:id="@+id/equalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/equal"
            android:textSize="30sp"
            app:layout_column="4"
            app:layout_row="5" />

        <Button
            android:id="@+id/oneButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_1"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="4" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_2"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="4" />

        <Button
            android:id="@+id/threeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_3"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="4" />

        <Button
            android:id="@+id/subtractionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/minus"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="4" />

        <Button
            android:id="@+id/modButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/mod"
            android:textSize="30sp"
            app:layout_column="4"
            app:layout_row="4" />

        <Button
            android:id="@+id/fourButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_4"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_5"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/sixButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_6"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/percentButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/percent"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/divideButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/division"
            android:textSize="30sp"
            app:layout_column="4"
            app:layout_row="3" />

        <Button
            android:id="@+id/sevenButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_7"
            android:textSize="30sp"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/eightButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_8"
            android:textSize="30sp"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/nineButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/_9"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/multiplyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/multiply"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/del"
            android:textSize="30sp"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/allClearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/ac"
            android:textSize="30sp"
            app:layout_column="3"
            app:layout_row="1" />
    </androidx.gridlayout.widget.GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>